# Multi-Crane-Simulation

./: .gitignore  pyproject.toml  目标.md  群塔LLM仿真系统开发Prompt.md  群塔LLM仿真系统开发方案_v0.4_完整版.md
backend/app/: main.py
configs/: curated_complex_cross_lifting.yaml  curated_dense_highrise_ground.yaml  curated_elevated_crane_transfer.yaml  deepseek_demo_4x2_manual.yaml  multifloor_construction_demo.yaml
docs/: curated_scenarios.md  desktop_packaging.md  desktop_workbench_phase1.md
docs/moduleA/: README.md  task01_config_schema.md  task02_config_loading.md  task03_resolved_config.md  task04_run_workspace.md  task05_secret_governance.md  task06_validation_errors.md  task07_tests_and_acceptance.md
docs/moduleB/: README.md  task01_crane_model_spec.md  task02_manual_layout_validation.md  task03_crane_config_resolution.md  task04_auto_layout_generator.md  task05_task_reachability_precheck.md  task06_tests_and_acceptance.md  test_run_report_2026-06-10.md
docs/moduleC/: README.md
docs/moduleD/: README.md  task01_task_schema_contract.md  task02_task_generation_sampling.md  task03_task_feasibility_validation.md  task04_task_queue_scheduler.md  task05_attach_release_state_machine.md  task06_deadline_failure_recovery.md  task07_signal_observation_event_contract.md  task08_tests_and_acceptance.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: batch_generate.py  build_dataset.py  build_stgnn_dataset.py  replay_episode.py  run_deepseek_demo.sh  run_episode.py  run_full_pipeline.py
(+474 files in other folders)
