[project]
name = "multi-crane-simulation"
version = "0.1.0"
description = "Multi-crane LLM simulation configuration and experiment management."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.13,<3",
  "pyarrow>=16,<18",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8.4,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/app/tests"]
